<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/memu_list">

    <group android:checkableBehavior="single">
            <item
                android:id="@+id/nav_my_song"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/lbl_nemu_private_song" />
            <item
                android:id="@+id/nav_my_playlist"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/lbl_nemu_private_playlist" />
            <item
                android:id="@+id/nav_add_song"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/lbl_nemu_private_add_song" />
            <item
                android:id="@+id/nav_add_playlist"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/lbl_nemu_private_add_playlist" />

            <item
                android:id="@+id/nav_public_song"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/lbl_nemu_public_playlist" />
            <item
                android:id="@+id/nav_public_playlist"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/lbl_nemu_public_song" />
    </group>

</menu>
