<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.alexandrearsenault.projetfinal.Activity.HomeActivity">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="800sp"
        android:id="@+id/lay_create1_container"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/lbl_create1_info"
                android:id="@+id/lbl_create1_info"
                android:layout_gravity="center_horizontal"
                android:textSize="32sp"
                android:layout_weight="2" />
            <TextView
                android:id="@+id/lbl_create1_error"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center_horizontal"
                android:textSize="12sp"
                android:layout_weight="2"
                android:textColor="@android:color/holo_red_dark"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/lay_create1_email"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/lbl_create1_email"
                android:id="@+id/lbl_create1_email"
                android:textSize="22sp"
                android:layout_gravity="left"
                android:layout_weight="1" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:inputType="text"
                android:id="@+id/txt_create1_email"
                android:textSize="22sp"
                android:enabled="true"
                android:layout_gravity="right"
                android:background="#b5b7b6"
                android:layout_weight="3"
                android:maxLength="50" />

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/lay_create1_alias"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/lbl_create1_alias"
                android:id="@+id/lblAddMoney2"
                android:textSize="22sp"
                android:layout_gravity="left"
                android:layout_weight="1" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:inputType="text"
                android:id="@+id/txt_create1_alias"
                android:textSize="22sp"
                android:enabled="true"
                android:layout_gravity="right"
                android:background="#b5b7b6"
                android:layout_weight="3"
                android:maxLength="50" />

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/lay_create1_pswd1"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/lbl_create1_psdw1"
                android:id="@+id/lbl_create1_pswd1"
                android:textSize="22sp"
                android:layout_gravity="left"
                android:layout_weight="1" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:id="@+id/txt_create1_pswd1"
                android:textSize="22sp"
                android:enabled="true"
                android:layout_gravity="right"
                android:background="#b5b7b6"
                android:layout_weight="3"
                android:maxLength="50" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/lay_create1_pswd2"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/lbl_create1_pswd2"
                android:id="@+id/lbl_create1_pswd2"
                android:textSize="22sp"
                android:layout_gravity="left"
                android:layout_weight="1" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:id="@+id/txt_create1_pswd2"
                android:textSize="22sp"
                android:enabled="true"
                android:layout_gravity="right"
                android:background="#b5b7b6"
                android:layout_weight="3"
                android:maxLength="50" />

        </LinearLayout>



        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/lay_create1_avatar"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/lbl_create1_avatar"
                android:id="@+id/lbl_create1_avatar"
                android:textSize="32sp"
                android:layout_gravity="center"
                android:layout_weight="1" />
            <CheckBox
                android:id="@+id/chk_create1_avatar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>
            <Button
                android:id="@+id/btn_create1_avatar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_create1_btn_avatar" />

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:id="@+id/lay_create1_send"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn_create1_create"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_create1_btn_send" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
