<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center">

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:inputType="textPersonName"
        android:text="Name"
        android:ems="10"
        android:id="@+id/txt_playlist_name"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:textAlignment="center"/>

    <LinearLayout
        android:id="@+id/lay_playlist_edit"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:gravity="center">
            <Switch
                android:id="@+id/swt_playlist_public"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:text="@string/lbl_playlist_swt_public"
                android:layout_gravity="center"/>
            <Switch
                android:id="@+id/swt_playlist_active"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:text="@string/lbl_playlist_swt_active"
                android:layout_gravity="center"/>

        </LinearLayout>
        <Button
            android:id="@+id/btn_playlist_edit"
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:textSize="12dp"
            android:text="@string/lbl_playlist_btn_edit"/>
        <TextView
            android:id="@+id/lbl_playlist_error"
            android:layout_width="match_parent"
            android:layout_height="30dp" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/rec_playlist_list"
        android:name="com.example.adrienarsenault.projet1.MovieListFragment"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_width="fill_parent"
        android:layout_height="400sp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="0dp"
        tools:context="com.example.adrienarsenault.projet1.com.aarsenault.adrienarsenault.projet1.MainListActivity"
        />

</LinearLayout>