<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="4" >
        <ImageButton
            android:id="@+id/img_profile_avatar"
            android:layout_height="200dp"
            android:layout_weight="1"
            android:layout_width="200dp" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="vertical"
            android:weightSum="3" >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="Alias"
                android:ems="10"
                android:id="@+id/lbl_profile_alias"
                android:layout_weight="1"
                android:layout_gravity="left"
                android:layout_marginLeft="40dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="courriel"
                android:ems="10"
                android:id="@+id/lbl_profile"
                android:layout_weight="1"
                android:layout_gravity="left"
                android:layout_marginLeft="40dp" />

            <Button
                android:id="@+id/btn_profile_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_profile_btn_edit"
                android:layout_weight="1"/>

        </LinearLayout>
    </LinearLayout>



    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_weight="1">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/lbl_profile_nb_song"
            android:textSize="22sp"
            android:layout_gravity="left"
            android:layout_weight="1" />

        <EditText
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:inputType="text"
            android:id="@+id/txt_profile_nb_song"
            android:textSize="22sp"
            android:enabled="true"
            android:layout_gravity="right"
            android:layout_weight="3"
            android:maxLength="50" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_weight="1">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/lbl_profile_nb_playlist"
            android:textSize="22sp"
            android:layout_gravity="left"
            android:layout_weight="1" />

        <EditText
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:inputType="text"
            android:id="@+id/txt_profile_nb_playlist"
            android:textSize="22sp"
            android:enabled="true"
            android:layout_gravity="right"
            android:layout_weight="3"
            android:maxLength="50" />

    </LinearLayout>

</LinearLayout>